fix back to top border color issue in dark mode

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1749,3 +1749,14 @@ article {
     gap: 1rem;
   }
 }
+
+[data-theme="dark"] {
+  .back-to-top {
+    border-color: var(--grey-color-light);
+    
+    &:hover {
+      border-color: var(--brand-color);
+      background: var(--button-gradient-hover);
+    }
+  }
+}
